--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <br>
                         <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
                             <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Search weather..."
+                                <input class="form-control" type="text" id="movie-input" placeholder="Search by zip code..."
                                     aria-label="Search" aria-describedby="basic-addon2" />
                                 <div class="input-group-append">
                                     <button class="btn btn-primary" type="button" id="searchWeather"><i class="fas fa-search"></i></button>
