--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="row">
                         <!--Current weather will Get Dumped Here -->
-                        <div id="weather-view"></div>
+                        <div class id="weather-view"></div> 
                     </div>
                     <br><br>
                     <div class="row">
@@ -114,7 +114,7 @@
                         <h2>5 Day Forecast:</h2>
                         </div>
                     <div class="row">
-                        <div id= "fiveDayView"></div>
+                        <div class= "row" id= "fiveDayView"></div>
                     </div>
 
             </main>
