--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Weather</title>
+    <link href="css/style.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
         crossorigin="anonymous" />
@@ -71,8 +72,11 @@
             <main>
                 <div class="container-fluid">
                     <h1 class="mt-4 text-center">Weather Dashboard</h1>
-                    <div class="row">
-                        <h2>Today's Weather:</h2>
+                    <div class="row" id="todayWeather">
+                        <div class="col-3" id ="todayWeatherCol">
+                            <h2>Today's Weather:</h2>
+                          </div>
+                          <div class="col-9" id="todayLocationCol"></div>
                     </div>
                     <div class="row">
                         <!--Current weather will Get Dumped Here -->
@@ -81,11 +85,13 @@
                     <br><br>
                     
                         <br><br>
-                    <div class="row">
-                        <h2>5 Day Forecast:</h2>
+                    <div class="row" id="fiveDayWeather" >
+                        <div class="col-3" id ="fiveDayWeatherCol">
+                            <h2>5 Day Forecast:</h2>
                         </div>
+                        <div class="col-9" id="fiveDayLocationCol"></div>
                     <div class="row">
-                        <div class= "row" id= "fiveDayView"></div>
+                        <div class id= "fiveDayView"></div>
                     </div>
 
             </main>
